# sphinx-pieces

./: .dprint.jsonc  .gitignore  LICENSE  README.md  README.rst  mise.toml  pyproject.toml  setup.cfg
sample/: README.md  conf.py  index.rst  indices.rst  sphinx_pieces.yaml  usage.rst
sphinx-pieces/: __init__.py
sphinx_pieces/: __init__.py
sphinxcontrib/units/: __init__.py
tests/: conftest.py  test_unit_directive.py
tests/roots/test-unit-directive/: conf.py  index.rst  sphinx_pieces.yaml
