[project]
name = "sphinx-units"
version = "0.1.0"
authors = [{ name = "Emily April Kazak", email = "emily@artyom.me" }]
requires-python = ">=3.13"
dependencies = [
    "pbr>=6.1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sphinxcontrib"]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "sphinx>=8.2.3",
]
