
[project]
name = "sphinx_pieces"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = ["sphinx>=7.4.7"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["."]

[dependency-groups]
dev = [
  "mypy>=1.16.1",
  "pyright>=1.1.403",
  "pytest>=8.4.1",
  "pytest-sphinx>=0.6.0",
  "types-docutils>=0.21.0.20250710",
]
